@@ -25,7 +25,9 @@
 #define LOCKDOWN_KEY "/desktop/gnome/lockdown/disable_theme_settings"
 #define BACKGROUND_KEY "/desktop/gnome/background/picture_filename"
 #define APPLICATION_FONT_KEY "/desktop/gnome/interface/font_name"
+#define DOCUMENTS_FONT_KEY "/desktop/gnome/interface/document_font_name"
 #define DESKTOP_FONT_KEY "/apps/nautilus/preferences/desktop_font"
+#define WINDOWTITLE_FONT_KEY "/apps/metacity/general/titlebar_font"
 #define MONOSPACE_FONT_KEY "/desktop/gnome/interface/monospace_font_name"
 
 #ifdef HAVE_XCURSOR
